day01完成分页添加修改异常处理

--- a/common/service_base/pom.xml
+++ b/common/service_base/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>service_base</artifactId>
 
-
+    <dependencies>
+        <dependency>
+        <groupId>com.atguigu</groupId>
+        <artifactId>common_utils</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
