day09完成视频上传功能

--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.jackson.time-zone=GMT+8
 #设置日志级别
 logging.level.root=info
 
+#设置mybatis配置项
+mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
+
