--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -24,3 +24,7 @@ logging.level.root=info
 #设置mybatis配置项
 mybatis-plus.mapper-locations=classpath:com/atguigu/eduservice/mapper/xml/*.xml
 
+# nacos服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+
