--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.redis.lettuce.pool.min-idle=0
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-#配置mapper xml文件的路径
+#配置mapper xml文件的路径 自定义写sql查询的mapper路径，一定要配置清楚
 mybatis-plus.mapper-locations=classpath:com/atguigu/ucenterservice/mapper/xml/*.xml
 
 #mybatis日志
